added remotes and updated scripts